# minimalOpenGL

./: .gitignore  CMakeLists.txt  LICENSE
cmake/Modules/: FindGLFW.cmake
src/: CMakeLists.txt
src/lib/: CMakeLists.txt
src/lib/display3d/: CMakeLists.txt  Camera.cpp  Camera.h  Mesh.cpp  Mesh.h  Shader.cpp  Shader.h  Texture.cpp  Texture.h
src/shaders/: CMakeLists.txt  basicFragmentShader.frag  basicVertexShader.vert  texturedFragmentShader.frag  texturedVertexShader.vert
src/soft/: CMakeLists.txt  main.cpp
